--- a/client/package.json
+++ b/client/package.json
@@ -89,7 +89,7 @@
     "@types/express-serve-static-core": "4.17.2"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development concurrently npm:start npm:start:api",
+    "dev": "cross-env NODE_ENV=development concurrently yarn:start:react yarn:start:api:watch",
     "start": "react-scripts -r @cypress/instrument-cra start",
     "start:ci": "cross-env NODE_ENV=test concurrently yarn:start:react yarn:start:api",
     "start:react": "npm run react-scripts -r @cypress/instrument-cra start",
@@ -105,8 +105,8 @@
     "test:api": "yarn cypress:run --spec 'integration/api/*'",
     "test:unit": "react-scripts test --runInBand",
     "test:unit:ci": "react-scripts test --watch false --runInBand",
-    "start:api": "yarn tsnode --files ../server/backend/app.ts",
-    "start:api:watch": "nodemon --exec yarn tsnode --watch 'backend' ../server/backend/app.ts",
+    "start:api": "yarn tsnode --files backend/app.ts",
+    "start:api:watch": "nodemon --exec yarn tsnode --watch 'backend' backend/app.ts",
     "start:react:proxy-server": "yarn tsnode scripts/testServer.ts",
     "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
     "tsnode": "nyc --silent ts-node -P tsconfig.tsnode.json",
