--- a/server/package.json
+++ b/server/package.json
@@ -52,6 +52,7 @@
     "faker": "5.1.0",
     "fuse.js": "6.4.1",
     "husky": "4.3.0",
+    "jest": "^26.6.1",
     "json": "10.0.0",
     "lowdb": "1.0.0",
     "morgan": "1.10.0",
@@ -60,6 +61,7 @@
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "shortid": "2.2.15",
+    "supertest": "^6.0.0",
     "ts-node": "9.0.0",
     "typescript": "4.0.3",
     "uuid": "8.3.1"
@@ -86,35 +88,34 @@
     "@types/express-serve-static-core": "4.17.2"
   },
   "scripts": {
+    "prestart": "npm run db:seed:dev",
     "start": "npm run start:api",
-    "dev": "npm run start:api:watch",
+    "start:api": "npm run tsnode --files ./backend/app.ts",
+    "db:seed": "npm run tsnode scripts/generateSeedData",
+    "tsnode": "nyc --silent ts-node -P ./tsconfig.tsnode.json",
+    "postdb:seed": "npm run db:seed:dev",
+    "db:seed:dev": "ncp ./data/database-seed.json ./data/database.json",
+    "dev": "echo \"we don't have 'dev' here, did you mean to run it from /client?\" ",
+    "start:api:watch": "nodemon --exec npm run tsnode --watch 'backend' backend/app.ts",
     "start:ci": "cross-env NODE_ENV=test concurrently yarn:start:react yarn:start:api",
     "start:react": "react-scripts -r @cypress/instrument-cra start",
     "start:empty": "cross-env NODE_ENV=development EMPTY_SEED=true concurrently yarn:start:react yarn:start:api:watch",
+    "db:seedEvents": "yarn tsnode scripts/seedEvents",
     "list:dev:users": "cat data/database.json | json -a users | json -a id username",
     "types": "tsc --noEmit",
     "cypress:open": "cypress open",
     "cypress:open:mobile": "cypress open --config viewportWidth=375,viewportHeight=667",
     "cypress:run": "cypress run",
     "cypress:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
-    "test": "yarn cypress:open",
+    "test": "jest \"events.test.ts\"",
     "test:headless": "yarn cypress:run",
     "test:api": "yarn cypress:run --spec 'integration/api/*'",
     "test:unit": "react-scripts test --runInBand",
     "test:unit:ci": "react-scripts test --watch false --runInBand",
-    "start:api": "npm run tsnode --files ./backend/app.ts",
-    "start:api:watch": "nodemon --exec npm run tsnode --watch 'backend' backend/app.ts",
     "start:react:proxy-server": "yarn tsnode scripts/testServer.ts",
     "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
-    "tsnode": "nyc --silent ts-node -P ./tsconfig.tsnode.json",
     "tsnode:not-instrumented": "ts-node -P tsconfig.tsnode.json",
-    "db:seed": "yarn tsnode scripts/generateSeedData",
-    "db:seedEvents": "yarn tsnode scripts/seedEvents",
-    "db:seed:dev": "ncp ./data/database-seed.json ./data/database.json",
     "db:seed:empty": "ncp ./data/empty-seed.json ./data/database.json",
-    "postdb:seed": "yarn db:seed:dev",
-    "prestart": "yarn db:seed:dev",
-    "predev": "yarn db:seed:dev",
     "prestart:empty": "yarn db:seed:empty",
     "prebuild": "yarn types",
     "react-start": "react-scripts start",
