--- a/client/package.json
+++ b/client/package.json
@@ -89,8 +89,13 @@
     "@types/express-serve-static-core": "4.17.2"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development concurrently npm:start npm:start:api",
     "start": "react-scripts -r @cypress/instrument-cra start",
+    "dev": "cross-env NODE_ENV=development concurrently npm:start npm:start:api",
+    "start:api": "yarn tsnode --files ../server/backend/app.ts",
+    
+    
+    
+    "seed": "npm run tsnode ../server/scripts/generateSeedData",
     "start:ci": "cross-env NODE_ENV=test concurrently yarn:start:react yarn:start:api",
     "start:react": "npm run react-scripts -r @cypress/instrument-cra start",
     "start:empty": "cross-env NODE_ENV=development EMPTY_SEED=true concurrently yarn:start:react yarn:start:api:watch",
@@ -105,13 +110,11 @@
     "test:api": "yarn cypress:run --spec 'integration/api/*'",
     "test:unit": "react-scripts test --runInBand",
     "test:unit:ci": "react-scripts test --watch false --runInBand",
-    "start:api": "yarn tsnode --files ../server/backend/app.ts",
     "start:api:watch": "nodemon --exec yarn tsnode --watch 'backend' ../server/backend/app.ts",
     "start:react:proxy-server": "yarn tsnode scripts/testServer.ts",
     "prettier": "prettier --write '**/**.{ts,js,tsx}' '*.{json,md,yml}'",
     "tsnode": "nyc --silent ts-node -P tsconfig.tsnode.json",
     "tsnode:not-instrumented": "ts-node -P tsconfig.tsnode.json",
-    "db:seed": "npm run tsnode scripts/generateSeedData",
     "db:seedEvents": "yarn tsnode scripts/seedEvents",
     "db:seed:dev": "ncp ./data/database-seed.json ./data/database.json",
     "db:seed:empty": "ncp ./data/empty-seed.json ./data/database.json",
