--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "@types/express-serve-static-core": "4.17.2",
     "@types/express-session": "1.17.0",
     "@types/faker": "5.1.2",
-    "@types/jest": "26.0.14",
+    "@types/jest": "^26.0.14",
     "@types/json-server": "0.14.2",
     "@types/lodash": "4.14.162",
     "@types/lowdb": "1.0.9",
@@ -37,6 +37,7 @@
     "@types/passport": "1.0.4",
     "@types/shortid": "0.0.29",
     "@types/styled-components": "^5.1.4",
+    "@types/supertest": "^2.0.10",
     "@types/uuid": "8.3.0",
     "@types/validator": "13.1.0",
     "@types/webpack-env": "1.15.3",
@@ -62,6 +63,7 @@
     "passport-local": "1.0.0",
     "shortid": "2.2.15",
     "supertest": "^6.0.0",
+    "ts-jest": "^26.4.3",
     "ts-node": "9.0.0",
     "typescript": "4.0.3",
     "uuid": "8.3.1"
@@ -142,12 +144,6 @@
       "no-unused-expressions": 0
     }
   },
-  "jest": {
-    "watchPathIgnorePatterns": [
-      "<rootDir>/data/database.json",
-      "<rootDir>/data/database-seed.json"
-    ]
-  },
   "husky": {
     "hooks": {
       "pre-push": "yarn types"
@@ -159,6 +155,7 @@
       "not dead",
       "not op_mini all"
     ],
+    
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
