--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
+  
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "server",
     "target": "es5",
     "lib": [
       "dom",
@@ -20,10 +21,11 @@
     "jsx": "react",
     "isolatedModules": true
   },
+  "files":["backend/__tests__/events.test.ts"],
   "include": [
-    "src",
-    "scripts",
-    "server/backend",
-    "src/__tests__"
+    // "src",
+    // "scripts",
+    "backend",
+    "__tests__"
   ]
 }
