--- a/server/package.json
+++ b/server/package.json
@@ -110,6 +110,7 @@
     "cypress:run": "cypress run",
     "cypress:run:mobile": "cypress run --config viewportWidth=375,viewportHeight=667",
     "test": "jest \"server/backend/__tests__/events.test.ts\"",
+    "testo": "jest ",
     "test:headless": "yarn cypress:run",
     "test:api": "yarn cypress:run --spec 'integration/api/*'",
     "test:unit": "react-scripts test --runInBand",
@@ -175,8 +176,7 @@
         "<rootDir>"
       ],
       "testMatch": [
-        "**/__tests__/**/*.+(ts|tsx|js)",
-        "**/?(*.)+(spec|test).+(ts|tsx|js)"
+        "<rootDir>/backend/__tests__/*.test.+(ts|tsx|js)"
       ],
       "transform": {
         "^.+\\.(ts|tsx)$": "ts-jest"
