--- a/client/package.json
+++ b/client/package.json
@@ -152,7 +152,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn types"
+      "pre-push": "npm run types"
     }
   },
   "browserslist": {
