fixed package json and added package-lock

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "You will build analytics system that would present usage analytics about a website by collecting events sent to the platform.",
   "main": "index.js",
   "scripts": {
-    
-    "init": "cd server & npm i & cd .. && cd client && npm i",
+    "init": "cd server && npm i && cd .. && cd client && npm i",
     "test": "cd server && npm run test"
   },
   "repository": {
