Adding map to client

--- a/client/package.json
+++ b/client/package.json
@@ -48,7 +48,7 @@
     "cross-env": "7.0.2",
     "date-fns": "2.16.1",
     "dinero.js": "1.8.1",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "faker": "5.1.0",
     "formik": "2.2.0",
     "husky": "4.3.0",
@@ -57,6 +57,7 @@
     "ncp": "2.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-infinite-calendar": "2.3.1",
     "react-number-format": "4.4.1",
     "react-router": "5.2.0",
