--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@types/react-virtualized": "9.21.10",
+    "@types/recharts": "^1.8.16",
     "@types/shortid": "0.0.29",
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "8.3.0",
