--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@types/react": "16.9.52",
     "@types/react-dom": "16.9.8",
     "@types/react-infinite-calendar": "2.3.5",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@types/react-virtualized": "9.21.10",
@@ -61,6 +62,7 @@
     "react-dom": "16.13.1",
     "react-google-maps": "^9.4.5",
     "react-infinite-calendar": "2.3.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-number-format": "4.4.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
